# proman

./: Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  build.rs  rustfmt.toml
default-plugins/: golang.ron  rust.ron
src/: consts.rs  main.rs
src/config/: mod.rs  parser.rs
src/widgets/: mod.rs  stateful_list.rs
