[package]
name = "proman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
crossterm = "0.27.0"
directories = "5.0.1"
ratatui = "0.26.2"
ron = "0.8.1"
serde = { version = "1.0.200", features = ["serde_derive"] }
serde_derive = "1.0.200"
thiserror = "1.0.61"
tui-input = { version = "0.8.0", features = ["crossterm"] }
